--- a/pages/spy/spy.wxml
+++ b/pages/spy/spy.wxml
@@ -1,14 +1,14 @@
 <view class="page">
   <view class="spy">
 
-    <view class="spy-nav">
-      <view  class="active">商品</view>
-      <view>详情</view>
-      <view>评价</view>
+    <view class="spy-nav" id="nav">
+      <view  class="{{spyActiveId=='lv1'?'active':''}}" bindtap='switchTab' data-id="lv1">商品</view>
+      <view  class="{{spyActiveId=='lv2'?'active':''}}"  bindtap='switchTab' data-id="lv2">详情</view>
+      <view  class="{{spyActiveId=='lv3'?'active':''}}"  bindtap='switchTab' data-id="lv3">评价</view>
     </view>
 
     <view class="spy-cnt">
-      <view>商品</view>
+      <view class="spy-cnt-tl"  id="lv1">商品</view>
       <view>==============</view>
       <view>==============</view>
       <view>==============</view>
@@ -37,7 +37,22 @@
       <view>==============</view>
       <view>==============</view>
       <view>==============</view>
-      <view>详情</view>
+      <view>==============</view>
+      <view>==============</view>
+      <view>==============</view>
+      <view>==============</view>
+      <view>==============</view>
+      <view>==============</view>
+      <view>==============</view>
+      <view>==============</view>
+      <view>==============</view>
+      <view>==============</view>
+      <view>==============</view>
+      <view>==============</view>
+      <view>==============</view>
+      <view>==============</view>
+      <view>==============</view>
+      <view class="spy-cnt-tl" id="lv2">详情</view>
       <view>==============</view>
       <view>==============</view>
       <view>==============</view>
@@ -66,7 +81,7 @@
       <view>==============</view>
       <view>==============</view>
       <view>==============</view>
-      <view>评价</view>
+      <view  class="spy-cnt-tl"id="lv3">评价</view>
       <view>==============</view>
       <view>==============</view>
       <view>==============</view>
